--- a/homework/homework-day-56/src/components/Header/Header.css
+++ b/homework/homework-day-56/src/components/Header/Header.css
@@ -10,7 +10,7 @@ header {
 }
 
 
-header.light-mode {
+/* header.light-mode {
     background-color: rgba(255, 255, 255, 0.664);
     color: #000;
 }
@@ -28,4 +28,4 @@ header.dark-mode {
 .nav-home {
     color: rgb(36, 160, 84);
     font-weight: 700;
-}
+} */
